app/src/main/java/com/example/truckercore/shared/errors/InvalidQuerySettingsException.kt
package com.example.truckercore.shared.errors

class InvalidQuerySettingsException(message: String): Exception()